# rust-forge

./: .gitignore  .readthedocs.yaml  404.html  BUGS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  MANUAL.md  NOTES.tmp  README.md  RELEASE_NOTES_v0.4.0.md  build.rs  changelog.html  dotforge.1  forge.1  forge.md  go-project-tree.txt  index.html  introduction.html  pack_and_go_design.md  pack_and_go_timeline.md  print.html  response.md  roadmap.html  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mdbook.yml  release.yml
advanced/: database.html  migration.html  troubleshooting.html
context/: forge-comparison-table.md  forge-context-2025-03-23.md  original-motivation.txt  rust-tui-migration-context.md
development/: architecture.html  contributing.html  project-structure.html
docs/: book.toml  index.md
docs/development/: project-structure.md
docs/getting-started/: installation.md
docs/mkdocs-backup/: mkdocs.yml
docs/src/: SUMMARY.md  changelog.md  introduction.md  roadmap.md
docs/src/features/: overview.md
docs/src/getting-started/: basic-usage.md  installation.md  (+1 more)
docs/theme/: custom.css
features/: backup-system.html  overview.html  profile-system.html
getting-started/: basic-usage.html  installation.html  quick-start.html
guide/: interactive-mode.html  managing-dotfiles.html  profiles.html  symlinks.html
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/dotfile/: backup.rs  link.rs  list.rs  mod.rs  unlink.rs
src/scanner/: mod.rs
src/symlink/: mod.rs
src/utils/: mod.rs  path_utils.rs  ui.rs
tests/: core_commands.rs  database_isolation.rs  pack_and_go.rs  path_utils.rs  symlink_utils.rs
tests/common/: mod.rs
theme/: custom.css
(+1 files in other folders)
