[package]
name = "dotforge"
version = "0.2.0"
edition = "2024"
description = "A powerful symlink management tool designed as a modern alternative to GNU Stow"
authors = ["jwl"]
license = "MIT"
repository = "https://github.com/jwliles/rust-dotforge"
keywords = ["symlink", "dotfiles", "stow", "configuration"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
test-case = "3.2"
assert_cmd = "2.0"
