[package]
name = "forge-rs"
version = "0.5.0"
edition = "2024"
description = "A powerful symlink management tool designed as a modern alternative to GNU Stow"
authors = ["jwl"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jwliles/rust-forge"
keywords = ["symlink", "dotfiles", "stow", "configuration"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "forge_rs"
path = "src/lib.rs"

[[bin]]
name = "forge"  # This will be the binary name
path = "src/main.rs"

[dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.4"
toml = "0.8"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
test-case = "3.2"
assert_cmd = "2.0"
